[gd_scene load_steps=7 format=3 uid="uid://cpfdas1ag58bt"]

[ext_resource type="Script" path="res://unit_modules/weapon.gd" id="1_wupni"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_0fyuk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_to6bh"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_abev0"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_kuj0x"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_wqgrg"]

[node name="WeaponRefactor" type="Node2D"]
script = ExtResource("1_wupni")

[node name="ReloadTimer" type="Timer" parent="."]

[node name="WeaponStateChart" type="Node" parent="."]
script = ExtResource("2_0fyuk")

[node name="Root" type="Node" parent="WeaponStateChart"]
script = ExtResource("3_to6bh")

[node name="Activity" type="Node" parent="WeaponStateChart/Root"]
script = ExtResource("4_abev0")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="WeaponStateChart/Root/Activity"]
script = ExtResource("5_kuj0x")

[node name="On Shoot" type="Node" parent="WeaponStateChart/Root/Activity/Idle"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Shooting")
event = &"shoot"

[node name="On Rotate" type="Node" parent="WeaponStateChart/Root/Activity/Idle"]
script = ExtResource("6_wqgrg")
to = NodePath("../../load + rot/Rotating")
event = &"rotate"

[node name="Shooting" type="Node" parent="WeaponStateChart/Root/Activity"]
script = ExtResource("5_kuj0x")

[node name="On Rotate" type="Node" parent="WeaponStateChart/Root/Activity/Shooting"]
script = ExtResource("6_wqgrg")
to = NodePath("../../load + rot/Rotating")
event = &"rotate"

[node name="On Ammo Exhausted" type="Node" parent="WeaponStateChart/Root/Activity/Shooting"]
script = ExtResource("6_wqgrg")
to = NodePath("../../../Loaded/No Ammo")
event = &"ammo exhausted"

[node name="On Reload" type="Node" parent="WeaponStateChart/Root/Activity/Shooting"]
script = ExtResource("6_wqgrg")
to = NodePath("../../load + rot/Loading")
event = &"reload"

[node name="load + rot" type="Node" parent="WeaponStateChart/Root/Activity"]
script = ExtResource("3_to6bh")

[node name="Rotating" type="Node" parent="WeaponStateChart/Root/Activity/load + rot"]
script = ExtResource("5_kuj0x")

[node name="On Stop Rotating" type="Node" parent="WeaponStateChart/Root/Activity/load + rot/Rotating"]
script = ExtResource("6_wqgrg")
to = NodePath("../../../Idle")
event = &"stop rotating"

[node name="On Shoot" type="Node" parent="WeaponStateChart/Root/Activity/load + rot/Rotating"]
script = ExtResource("6_wqgrg")
to = NodePath("../../../Shooting")
event = &"shoot"

[node name="Loading" type="Node" parent="WeaponStateChart/Root/Activity/load + rot"]
script = ExtResource("5_kuj0x")

[node name="On Loaded" type="Node" parent="WeaponStateChart/Root/Activity/load + rot/Loading"]
script = ExtResource("6_wqgrg")
to = NodePath("../../../../Loaded/Loaded")

[node name="Crew" type="Node" parent="WeaponStateChart/Root"]
script = ExtResource("4_abev0")
initial_state = NodePath("Crew Enabled")

[node name="Crew Enabled" type="Node" parent="WeaponStateChart/Root/Crew"]
script = ExtResource("5_kuj0x")

[node name="On Crew Disable" type="Node" parent="WeaponStateChart/Root/Crew/Crew Enabled"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Crew Disabled")
event = &"crew disabled"

[node name="Crew Disabled" type="Node" parent="WeaponStateChart/Root/Crew"]
script = ExtResource("5_kuj0x")

[node name="On Crew Enable" type="Node" parent="WeaponStateChart/Root/Crew/Crew Disabled"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Crew Enabled")
event = &"crew enabled"

[node name="Loaded" type="Node" parent="WeaponStateChart/Root"]
script = ExtResource("4_abev0")
initial_state = NodePath("Loaded")

[node name="Loaded" type="Node" parent="WeaponStateChart/Root/Loaded"]
script = ExtResource("5_kuj0x")

[node name="On Unload" type="Node" parent="WeaponStateChart/Root/Loaded/Loaded"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Not Loaded")
event = &"unload"

[node name="Not Loaded" type="Node" parent="WeaponStateChart/Root/Loaded"]
script = ExtResource("5_kuj0x")

[node name="On Load" type="Node" parent="WeaponStateChart/Root/Loaded/Not Loaded"]
script = ExtResource("6_wqgrg")
to = NodePath("../../../Activity/load + rot/Loading")
event = &"load"

[node name="No Ammo" type="Node" parent="WeaponStateChart/Root/Loaded"]
script = ExtResource("5_kuj0x")

[node name="On Ammo Replenished" type="Node" parent="WeaponStateChart/Root/Loaded/No Ammo"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Not Loaded")

[node name="Damage" type="Node" parent="WeaponStateChart/Root"]
script = ExtResource("4_abev0")
initial_state = NodePath("Not Damaged")

[node name="Not Damaged" type="Node" parent="WeaponStateChart/Root/Damage"]
script = ExtResource("5_kuj0x")

[node name="On Damaged" type="Node" parent="WeaponStateChart/Root/Damage/Not Damaged"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Damaged")
event = &"damaged"

[node name="Damaged" type="Node" parent="WeaponStateChart/Root/Damage"]
script = ExtResource("5_kuj0x")

[node name="On Damage Repaired" type="Node" parent="WeaponStateChart/Root/Damage/Damaged"]
script = ExtResource("6_wqgrg")
to = NodePath("../../Not Damaged")
event = &"damage repaired"

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="state_entered" from="WeaponStateChart/Root/Activity/Shooting" to="." method="_on_shooting_state_entered"]
[connection signal="state_physics_processing" from="WeaponStateChart/Root/Activity/Shooting" to="." method="_on_shooting_state_physics_processing"]
[connection signal="state_physics_processing" from="WeaponStateChart/Root/Activity/load + rot/Rotating" to="." method="_on_rotating_state_physics_processing"]
[connection signal="state_entered" from="WeaponStateChart/Root/Activity/load + rot/Loading" to="." method="_on_loading_state_entered"]
